fix rebase problems