@@ -1,5 +1,6 @@
 package com.example.ecm.service;
 
+import com.example.ecm.dto.patch_requests.PatchAttributeRequest;
 import com.example.ecm.dto.requests.CreateAttributeRequest;
 import com.example.ecm.dto.responses.CreateAttributeResponse;
 import com.example.ecm.exception.NotFoundException;
@@ -9,10 +10,15 @@ import com.example.ecm.model.DocumentType;
 import com.example.ecm.repository.AttributeRepository;
 import com.example.ecm.repository.DocumentTypeRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Сервис для работы с атрибутами документов.
@@ -33,7 +39,7 @@ public class AttributeService {
      * @return ответ с данными созданного атрибута документа
      */
     public CreateAttributeResponse createAttribute(CreateAttributeRequest request) {
-        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByNameIsIn(request.getDocumentTypesNames());
+        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
 
         Attribute attribute = attributeMapper.toAttribute(request);
         attribute.getDocumentTypes().addAll(documentTypes);
@@ -48,8 +54,14 @@ public class AttributeService {
      * @param id идентификатор атрибута документа
      * @return ответ с данными атрибута документа
      */
-    public CreateAttributeResponse getAttributeById(Long id) {
-        return attributeRepository.findById(id)
+    public CreateAttributeResponse getAttributeById(Long id, Boolean showOnlyALive) {
+        Optional<Attribute> attribute = attributeRepository.findById(id);
+
+        if (showOnlyALive) {
+            attribute = attribute.filter(Attribute::getIsAlive);
+        }
+
+        return attribute
                 .map(attributeMapper::toAttributeResponse)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
     }
@@ -59,10 +71,21 @@ public class AttributeService {
      *
      * @return список ответов с данными всех атрибутов документов
      */
-    public List<CreateAttributeResponse> getAllAttributes() {
-        return attributeRepository.findAll().stream()
-                .map(attributeMapper::toAttributeResponse)
-                .toList();
+    public List<CreateAttributeResponse> getAllAttributes(Pageable pageable, Boolean showOnlyALive) {
+        Page<Attribute> attributePage = attributeRepository.findAll(pageable);
+        Stream<Attribute> attributeStream = attributePage.stream();
+
+        if (showOnlyALive) {
+            attributeStream = attributeStream.filter(Attribute::getIsAlive);
+        }
+
+        return new PageImpl<>(
+                attributeStream
+                        .map(attributeMapper::toAttributeResponse)
+                        .collect(Collectors.toList()),
+                pageable,
+                attributePage.getTotalElements()
+        ).getContent();
     }
 
     /**
@@ -74,8 +97,9 @@ public class AttributeService {
      */
     public CreateAttributeResponse updateAttribute(Long id, CreateAttributeRequest request) {
         Attribute attribute = attributeRepository.findById(id)
+                .filter(Attribute::getIsAlive)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
-        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByNameIsIn(request.getDocumentTypesNames());
+        List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
 
         attribute.setDocumentTypes(documentTypes);
         attribute.setName(request.getName());
@@ -90,16 +114,39 @@ public class AttributeService {
      */
     public void deleteAttribute(Long id) {
         Attribute attribute = attributeRepository.findById(id)
+                .filter(Attribute::getIsAlive)
                 .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
-        attributeRepository.delete(attribute);
+        attribute.setIsAlive(false);
+        attributeRepository.save(attribute);
     }
 
-    public Optional<Attribute> findAttributeByName(String name) {
-        return attributeRepository.findByName(name);
+    public void recoverAttribute(Long id) {
+        Attribute attribute = attributeRepository.findById(id)
+                .filter(attr -> !attr.getIsAlive())
+                .orElseThrow(() -> new NotFoundException("Deleted Attribute with id: " + id + " not found"));
+        attribute.setIsAlive(true);
+        attributeRepository.save(attribute);
     }
 
-    public Optional<Attribute> findAttributeByName(String name) {
-        return attributeRepository.findByName(name);
+    public CreateAttributeResponse patchAttribute(Long id, PatchAttributeRequest request) {
+        Attribute attribute = attributeRepository.findById(id)
+                .filter(Attribute::getIsAlive)
+                .orElseThrow(() -> new NotFoundException("Attribute with id: " + id + " not found"));
+        if (request.getName() != null) {
+            attribute.setName(request.getName());
+        }
+
+        if (request.getRequired() != null) {
+            attribute.setRequired(request.getRequired());
+        }
+
+        if (request.getDocumentTypesIds() != null) {
+            List<DocumentType> documentTypes = documentTypeRepository.findDocumentTypesByIdIsIn(request.getDocumentTypesIds());
+            attribute.setDocumentTypes(documentTypes);
+        }
+
+
+        return attributeMapper.toAttributeResponse(attributeRepository.save(attribute));
     }
 
     public Optional<Attribute> findAttributeByName(String name) {
